# sphinx

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  build-esp32.sh  eim_config.toml
fs/bifs/: CMakeLists.txt  bifs.cpp  bifs.h
kernel/: device.cpp  device.h  exec.cpp  exec.h  fs.cpp  fs.h  proc.cpp  proc.h  sphinx.cpp  sphinx.h  stream.cpp  stream.h
targets/esp32/: CMakeLists.txt  main.cpp  term.cpp  term.h
targets/posix/: CMakeLists.txt  main.cpp  term.cpp  term.h
